--- a/cadastro.html
+++ b/cadastro.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro de Pessoas</title>
   <style>
     body {
@@ -219,3 +220,4 @@
 
 </body>
 </html>
+
