--- a/mensalidade.html
+++ b/mensalidade.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mensalidades</title>
   <style>
     body {
@@ -156,3 +157,4 @@
 
 </body>
 </html>
+
